Fix spacing

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -20,11 +20,6 @@
   border-radius: 10px;
   margin: 5px 20px;
   transition: background-color box-shadow .5s;
-  /* transition: box-shadow .5s; */
-    /* ${BurgerContainer}:hover & {
-      background-color: #A3DCF4;
-      box-shadow: 0px 0px 6px 2px rgba(182,227,246,0.49)
-    } */
 }
 
 .nav-links {
@@ -88,17 +83,16 @@ li:hover {
   }
 
   .nav-open {
-  opacity: 0;
-  pointer-events: none;
-  background-color: #f9f9f9;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  /* right: 2%; */
-  position: absolute;
-  top: 86px;
-  z-index: 3;
+    opacity: 0;
+    pointer-events: none;
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 86px;
+    z-index: 3;
   }
 
   .patty {
